force-app/main/default/objects/Team_Membership__c/fields/Skater__c.field-meta.xml
<CustomField>
    <fullName>Skater__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Memberships</relationshipLabel>
    <relationshipName>Team_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>